Added few aliases

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
       <li><div><img src="graphics/emojis/question.png"> :<span class="name">question</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_exclamation.png"> :<span class="name">grey_exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_question.png"> :<span class="name">grey_question</span>:</div></li>
-      <li><div><img src="graphics/emojis/zzz.png"> :<span class="name">zzz</span>:</div></li>
+      <li><div><img src="graphics/emojis/zzz.png"> :<span class="name" data-alternative-name="sleep">zzz</span>:</div></li>
       <li><div><img src="graphics/emojis/dash.png"> :<span class="name">dash</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_drops.png"> :<span class="name">sweat_drops</span>:</div></li>
       <li><div><img src="graphics/emojis/notes.png"> :<span class="name">notes</span>:</div></li>
@@ -206,8 +206,8 @@
       <li><div><img src="graphics/emojis/running.png"> :<span class="name">running</span>:</div></li>
       <li><div><img src="graphics/emojis/couple.png"> :<span class="name">couple</span>:</div></li>
       <li><div><img src="graphics/emojis/family.png"> :<span class="name">family</span>:</div></li>
-      <li><div><img src="graphics/emojis/two_men_holding_hands.png"> :<span class="name">two_men_holding_hands</span>:</div></li>
-      <li><div><img src="graphics/emojis/two_women_holding_hands.png"> :<span class="name">two_women_holding_hands</span>:</div></li>
+      <li><div><img src="graphics/emojis/two_men_holding_hands.png"> :<span class="name" data-alternative-name="gay">two_men_holding_hands</span>:</div></li>
+      <li><div><img src="graphics/emojis/two_women_holding_hands.png"> :<span class="name" data-alternative-name="gay">two_women_holding_hands</span>:</div></li>
       <li><div><img src="graphics/emojis/dancer.png"> :<span class="name" data-alternative-name="party">dancer</span>:</div></li>
       <li><div><img src="graphics/emojis/dancers.png"> :<span class="name" data-alternative-name="party">dancers</span>:</div></li>
       <li><div><img src="graphics/emojis/ok_woman.png"> :<span class="name">ok_woman</span>:</div></li>
@@ -281,7 +281,7 @@
     <h2>Nature</h2>
     <ul class="nature emojis" id="emoji-nature">
       <li><div><img src="graphics/emojis/sunny.png"> :<span class="name">sunny</span>:</div></li>
-      <li><div><img src="graphics/emojis/umbrella.png"> :<span class="name">umbrella</span>:</div></li>
+      <li><div><img src="graphics/emojis/umbrella.png"> :<span class="name" data-alternative-name="rain">umbrella</span>:</div></li>
       <li><div><img src="graphics/emojis/cloud.png"> :<span class="name">cloud</span>:</div></li>
       <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name">snowflake</span>:</div></li>
       <li><div><img src="graphics/emojis/snowman.png"> :<span class="name">snowman</span>:</div></li>
@@ -387,13 +387,13 @@
       <li><div><img src="graphics/emojis/last_quarter_moon_with_face.png"> :<span class="name">last_quarter_moon_with_face</span>:</div></li>
       <li><div><img src="graphics/emojis/first_quarter_moon_with_face.png"> :<span class="name">first_quarter_moon_with_face</span>:</div></li>
       <li><div><img src="graphics/emojis/moon.png"> :<span class="name">moon</span>:</div></li>
-      <li><div><img src="graphics/emojis/earth_africa.png"> :<span class="name">earth_africa</span>:</div></li>
+      <li><div><img src="graphics/emojis/earth_africa.png"> :<span class="name" data-alternative-name="europe, emea">earth_africa</span>:</div></li>
       <li><div><img src="graphics/emojis/earth_americas.png"> :<span class="name">earth_americas</span>:</div></li>
       <li><div><img src="graphics/emojis/earth_asia.png"> :<span class="name">earth_asia</span>:</div></li>
       <li><div><img src="graphics/emojis/volcano.png"> :<span class="name">volcano</span>:</div></li>
       <li><div><img src="graphics/emojis/milky_way.png"> :<span class="name">milky_way</span>:</div></li>
       <li><div><img src="graphics/emojis/partly_sunny.png"> :<span class="name">partly_sunny</span>:</div></li>
-      <li><div><img src="graphics/emojis/octocat.png"> :<span class="name">octocat</span>:</div></li>
+      <li><div><img src="graphics/emojis/octocat.png"> :<span class="name" data-alternative-name="github">octocat</span>:</div></li>
       <li><div><img src="graphics/emojis/squirrel.png"> :<span class="name">squirrel</span>:</div></li>
     </ul>
     <h2>Objects</h2>
@@ -402,7 +402,7 @@
       <li><div><img src="graphics/emojis/gift_heart.png"> :<span class="name">gift_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/dolls.png"> :<span class="name">dolls</span>:</div></li>
       <li><div><img src="graphics/emojis/school_satchel.png"> :<span class="name">school_satchel</span>:</div></li>
-      <li><div><img src="graphics/emojis/mortar_board.png"> :<span class="name">mortar_board</span>:</div></li>
+      <li><div><img src="graphics/emojis/mortar_board.png"> :<span class="name" data-alternative-name="edu, university">mortar_board</span>:</div></li>
       <li><div><img src="graphics/emojis/flags.png"> :<span class="name">flags</span>:</div></li>
       <li><div><img src="graphics/emojis/fireworks.png"> :<span class="name">fireworks</span>:</div></li>
       <li><div><img src="graphics/emojis/sparkler.png"> :<span class="name">sparkler</span>:</div></li>
@@ -756,37 +756,37 @@
       <li><div><img src="graphics/emojis/performing_arts.png"> :<span class="name">performing_arts</span>:</div></li>
       <li><div><img src="graphics/emojis/round_pushpin.png"> :<span class="name">round_pushpin</span>:</div></li>
       <li><div><img src="graphics/emojis/triangular_flag_on_post.png"> :<span class="name">triangular_flag_on_post</span>:</div></li>
-      <li><div><img src="graphics/emojis/jp.png"> :<span class="name">jp</span>:</div></li>
-      <li><div><img src="graphics/emojis/kr.png"> :<span class="name">kr</span>:</div></li>
-      <li><div><img src="graphics/emojis/cn.png"> :<span class="name">cn</span>:</div></li>
-      <li><div><img src="graphics/emojis/us.png"> :<span class="name">us</span>:</div></li>
-      <li><div><img src="graphics/emojis/fr.png"> :<span class="name">fr</span>:</div></li>
-      <li><div><img src="graphics/emojis/es.png"> :<span class="name">es</span>:</div></li>
-      <li><div><img src="graphics/emojis/it.png"> :<span class="name">it</span>:</div></li>
-      <li><div><img src="graphics/emojis/ru.png"> :<span class="name">ru</span>:</div></li>
-      <li><div><img src="graphics/emojis/gb.png"> :<span class="name">gb</span>:</div></li>
-      <li><div><img src="graphics/emojis/uk.png"> :<span class="name">uk</span>:</div></li>
-      <li><div><img src="graphics/emojis/de.png"> :<span class="name">de</span>:</div></li>
+      <li><div><img src="graphics/emojis/jp.png"> :<span class="name" data-alternative-name="japan, nippon, nihon">jp</span>:</div></li>
+      <li><div><img src="graphics/emojis/kr.png"> :<span class="name" data-alternative-name="korea, hanguk">kr</span>:</div></li>
+      <li><div><img src="graphics/emojis/cn.png"> :<span class="name" data-alternative-name="china, prc">cn</span>:</div></li>
+      <li><div><img src="graphics/emojis/us.png"> :<span class="name" data-alternative-name="usa, america, united states">us</span>:</div></li>
+      <li><div><img src="graphics/emojis/fr.png"> :<span class="name" data-alternative-name="france">fr</span>:</div></li>
+      <li><div><img src="graphics/emojis/es.png"> :<span class="name" data-alternative-name="spain, espana">es</span>:</div></li>
+      <li><div><img src="graphics/emojis/it.png"> :<span class="name" data-alternative-name="italy, italia">it</span>:</div></li>
+      <li><div><img src="graphics/emojis/ru.png"> :<span class="name" data-alternative-name="russia">ru</span>:</div></li>
+      <li><div><img src="graphics/emojis/gb.png"> :<span class="name" data-alternative-name="great britain, united kingdom">gb</span>:</div></li>
+      <li><div><img src="graphics/emojis/uk.png"> :<span class="name" data-alternative-name="great britain, united kingdom">uk</span>:</div></li>
+      <li><div><img src="graphics/emojis/de.png"> :<span class="name" data-alternative-name="germany, deutschland">de</span>:</div></li>
     </ul>
     <h2>Symbols</h2>
     <ul class="symbols emojis" id="emoji-symbols">
-      <li><div><img src="graphics/emojis/one.png"> :<span class="name">one</span>:</div></li>
-      <li><div><img src="graphics/emojis/two.png"> :<span class="name">two</span>:</div></li>
-      <li><div><img src="graphics/emojis/three.png"> :<span class="name">three</span>:</div></li>
-      <li><div><img src="graphics/emojis/four.png"> :<span class="name">four</span>:</div></li>
-      <li><div><img src="graphics/emojis/five.png"> :<span class="name">five</span>:</div></li>
-      <li><div><img src="graphics/emojis/six.png"> :<span class="name">six</span>:</div></li>
-      <li><div><img src="graphics/emojis/seven.png"> :<span class="name">seven</span>:</div></li>
-      <li><div><img src="graphics/emojis/eight.png"> :<span class="name">eight</span>:</div></li>
-      <li><div><img src="graphics/emojis/nine.png"> :<span class="name">nine</span>:</div></li>
-      <li><div><img src="graphics/emojis/keycap_ten.png"> :<span class="name">keycap_ten</span>:</div></li>
+      <li><div><img src="graphics/emojis/one.png"> :<span class="name" data-alternative-name="1">one</span>:</div></li>
+      <li><div><img src="graphics/emojis/two.png"> :<span class="name" data-alternative-name="2">two</span>:</div></li>
+      <li><div><img src="graphics/emojis/three.png"> :<span class="name" data-alternative-name="3">three</span>:</div></li>
+      <li><div><img src="graphics/emojis/four.png"> :<span class="name" data-alternative-name="4">four</span>:</div></li>
+      <li><div><img src="graphics/emojis/five.png"> :<span class="name" data-alternative-name="5">five</span>:</div></li>
+      <li><div><img src="graphics/emojis/six.png"> :<span class="name" data-alternative-name="6">six</span>:</div></li>
+      <li><div><img src="graphics/emojis/seven.png"> :<span class="name" data-alternative-name="7">seven</span>:</div></li>
+      <li><div><img src="graphics/emojis/eight.png"> :<span class="name" data-alternative-name="8">eight</span>:</div></li>
+      <li><div><img src="graphics/emojis/nine.png"> :<span class="name" data-alternative-name="9">nine</span>:</div></li>
+      <li><div><img src="graphics/emojis/keycap_ten.png"> :<span class="name" data-alternative-name="10">keycap_ten</span>:</div></li>
       <li><div><img src="graphics/emojis/1234.png"> :<span class="name">1234</span>:</div></li>
       <li><div><img src="graphics/emojis/zero.png"> :<span class="name">zero</span>:</div></li>
       <li><div><img src="graphics/emojis/hash.png"> :<span class="name">hash</span>:</div></li>
       <li><div><img src="graphics/emojis/symbols.png"> :<span class="name">symbols</span>:</div></li>
-      <li><div><img src="graphics/emojis/arrow_backward.png"> :<span class="name">arrow_backward</span>:</div></li>
+      <li><div><img src="graphics/emojis/arrow_backward.png"> :<span class="name" data-alternative-name="left">arrow_backward</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_down.png"> :<span class="name">arrow_down</span>:</div></li>
-      <li><div><img src="graphics/emojis/arrow_forward.png"> :<span class="name">arrow_forward</span>:</div></li>
+      <li><div><img src="graphics/emojis/arrow_forward.png"> :<span class="name" data-alternative-name="right">arrow_forward</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_left.png"> :<span class="name">arrow_left</span>:</div></li>
       <li><div><img src="graphics/emojis/capital_abcd.png"> :<span class="name">capital_abcd</span>:</div></li>
       <li><div><img src="graphics/emojis/abcd.png"> :<span class="name">abcd</span>:</div></li>
@@ -822,7 +822,7 @@
       <li><div><img src="graphics/emojis/cool.png"> :<span class="name">cool</span>:</div></li>
       <li><div><img src="graphics/emojis/free.png"> :<span class="name">free</span>:</div></li>
       <li><div><img src="graphics/emojis/ng.png"> :<span class="name">ng</span>:</div></li>
-      <li><div><img src="graphics/emojis/cinema.png"> :<span class="name">cinema</span>:</div></li>
+      <li><div><img src="graphics/emojis/cinema.png"> :<span class="name" data-alternative-name="movie">cinema</span>:</div></li>
       <li><div><img src="graphics/emojis/koko.png"> :<span class="name">koko</span>:</div></li>
       <li><div><img src="graphics/emojis/signal_strength.png"> :<span class="name">signal_strength</span>:</div></li>
       <li><div><img src="graphics/emojis/u5272.png"> :<span class="name">u5272</span>:</div></li>
@@ -876,7 +876,7 @@
       <li><div><img src="graphics/emojis/vs.png"> :<span class="name">vs</span>:</div></li>
       <li><div><img src="graphics/emojis/vibration_mode.png"> :<span class="name">vibration_mode</span>:</div></li>
       <li><div><img src="graphics/emojis/mobile_phone_off.png"> :<span class="name">mobile_phone_off</span>:</div></li>
-      <li><div><img src="graphics/emojis/chart.png"> :<span class="name">chart</span>:</div></li>
+      <li><div><img src="graphics/emojis/chart.png"> :<span class="name" data-alternative-name="yen">chart</span>:</div></li>
       <li><div><img src="graphics/emojis/currency_exchange.png"> :<span class="name">currency_exchange</span>:</div></li>
       <li><div><img src="graphics/emojis/aries.png"> :<span class="name">aries</span>:</div></li>
       <li><div><img src="graphics/emojis/taurus.png"> :<span class="name">taurus</span>:</div></li>
@@ -909,7 +909,7 @@
       <li><div><img src="graphics/emojis/clock1030.png"> :<span class="name">clock1030</span>:</div></li>
       <li><div><img src="graphics/emojis/clock11.png"> :<span class="name">clock11</span>:</div></li>
       <li><div><img src="graphics/emojis/clock1130.png"> :<span class="name">clock1130</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock12.png"> :<span class="name">clock12</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock12.png"> :<span class="name" data-alternative-name="midnight, noon">clock12</span>:</div></li>
       <li><div><img src="graphics/emojis/clock1230.png"> :<span class="name">clock1230</span>:</div></li>
       <li><div><img src="graphics/emojis/clock2.png"> :<span class="name">clock2</span>:</div></li>
       <li><div><img src="graphics/emojis/clock230.png"> :<span class="name">clock230</span>:</div></li>
