Some more synonyms

--- a/public/index.html
+++ b/public/index.html
@@ -469,16 +469,16 @@
       <li><div><img src="graphics/emojis/bathtub.png"> :<span class="name">bathtub</span>:</div></li>
       <li><div><img src="graphics/emojis/shower.png"> :<span class="name" data-alternative-name="water">shower</span>:</div></li>
       <li><div><img src="graphics/emojis/toilet.png"> :<span class="name">toilet</span>:</div></li>
-      <li><div><img src="graphics/emojis/wrench.png"> :<span class="name">wrench</span>:</div></li>
-      <li><div><img src="graphics/emojis/nut_and_bolt.png"> :<span class="name">nut_and_bolt</span>:</div></li>
-      <li><div><img src="graphics/emojis/hammer.png"> :<span class="name">hammer</span>:</div></li>
+      <li><div><img src="graphics/emojis/wrench.png"> :<span class="name" data-alternative-name="tools">wrench</span>:</div></li>
+      <li><div><img src="graphics/emojis/nut_and_bolt.png"> :<span class="name" data-alternative-name="tools">nut_and_bolt</span>:</div></li>
+      <li><div><img src="graphics/emojis/hammer.png"> :<span class="name" data-alternative-name="tools">hammer</span>:</div></li>
       <li><div><img src="graphics/emojis/seat.png"> :<span class="name">seat</span>:</div></li>
       <li><div><img src="graphics/emojis/moneybag.png"> :<span class="name">moneybag</span>:</div></li>
-      <li><div><img src="graphics/emojis/yen.png"> :<span class="name">yen</span>:</div></li>
-      <li><div><img src="graphics/emojis/dollar.png"> :<span class="name">dollar</span>:</div></li>
-      <li><div><img src="graphics/emojis/pound.png"> :<span class="name">pound</span>:</div></li>
-      <li><div><img src="graphics/emojis/euro.png"> :<span class="name">euro</span>:</div></li>
-      <li><div><img src="graphics/emojis/credit_card.png"> :<span class="name">credit_card</span>:</div></li>
+      <li><div><img src="graphics/emojis/yen.png"> :<span class="name" data-alternative-name="money">yen</span>:</div></li>
+      <li><div><img src="graphics/emojis/dollar.png"> :<span class="name" data-alternative-name="money">dollar</span>:</div></li>
+      <li><div><img src="graphics/emojis/pound.png"> :<span class="name" data-alternative-name="money">pound</span>:</div></li>
+      <li><div><img src="graphics/emojis/euro.png"> :<span class="name" data-alternative-name="money">euro</span>:</div></li>
+      <li><div><img src="graphics/emojis/credit_card.png"> :<span class="name" data-alternative-name="money">credit_card</span>:</div></li>
       <li><div><img src="graphics/emojis/money_with_wings.png"> :<span class="name">money_with_wings</span>:</div></li>
       <li><div><img src="graphics/emojis/e-mail.png"> :<span class="name">e-mail</span>:</div></li>
       <li><div><img src="graphics/emojis/inbox_tray.png"> :<span class="name">inbox_tray</span>:</div></li>
@@ -539,8 +539,8 @@
       <li><div><img src="graphics/emojis/rugby_football.png"> :<span class="name" data-alternative-name="sport">rugby_football</span>:</div></li>
       <li><div><img src="graphics/emojis/bowling.png"> :<span class="name" data-alternative-name="sport">bowling</span>:</div></li>
       <li><div><img src="graphics/emojis/golf.png"> :<span class="name" data-alternative-name="sport">golf</span>:</div></li>
-      <li><div><img src="graphics/emojis/mountain_bicyclist.png"> :<span class="name" data-alternative-name="sport">mountain_bicyclist</span>:</div></li>
-      <li><div><img src="graphics/emojis/bicyclist.png"> :<span class="name" data-alternative-name="sport">bicyclist</span>:</div></li>
+      <li><div><img src="graphics/emojis/mountain_bicyclist.png"> :<span class="name" data-alternative-name="sport, vehicle">mountain_bicyclist</span>:</div></li>
+      <li><div><img src="graphics/emojis/bicyclist.png"> :<span class="name" data-alternative-name="sport, vehicle">bicyclist</span>:</div></li>
       <li><div><img src="graphics/emojis/horse_racing.png"> :<span class="name" data-alternative-name="sport">horse_racing</span>:</div></li>
       <li><div><img src="graphics/emojis/snowboarder.png"> :<span class="name" data-alternative-name="sport">snowboarder</span>:</div></li>
       <li><div><img src="graphics/emojis/swimmer.png"> :<span class="name" data-alternative-name="sport">swimmer</span>:</div></li>
@@ -694,48 +694,48 @@
       <li><div><img src="graphics/emojis/ferris_wheel.png"> :<span class="name">ferris_wheel</span>:</div></li>
       <li><div><img src="graphics/emojis/fountain.png"> :<span class="name">fountain</span>:</div></li>
       <li><div><img src="graphics/emojis/roller_coaster.png"> :<span class="name">roller_coaster</span>:</div></li>
-      <li><div><img src="graphics/emojis/ship.png"> :<span class="name">ship</span>:</div></li>
-      <li><div><img src="graphics/emojis/speedboat.png"> :<span class="name">speedboat</span>:</div></li>
-      <li><div><img src="graphics/emojis/boat.png"> :<span class="name">boat</span>:</div></li>
-      <li><div><img src="graphics/emojis/sailboat.png"> :<span class="name">sailboat</span>:</div></li>
-      <li><div><img src="graphics/emojis/rowboat.png"> :<span class="name">rowboat</span>:</div></li>
+      <li><div><img src="graphics/emojis/ship.png"> :<span class="name" data-alternative-name="vehicle">ship</span>:</div></li>
+      <li><div><img src="graphics/emojis/speedboat.png"> :<span class="name" data-alternative-name="vehicle">speedboat</span>:</div></li>
+      <li><div><img src="graphics/emojis/boat.png"> :<span class="name" data-alternative-name="vehicle">boat</span>:</div></li>
+      <li><div><img src="graphics/emojis/sailboat.png"> :<span class="name" data-alternative-name="vehicle">sailboat</span>:</div></li>
+      <li><div><img src="graphics/emojis/rowboat.png"> :<span class="name" data-alternative-name="vehicle">rowboat</span>:</div></li>
       <li><div><img src="graphics/emojis/anchor.png"> :<span class="name">anchor</span>:</div></li>
       <li><div><img src="graphics/emojis/rocket.png"> :<span class="name">rocket</span>:</div></li>
-      <li><div><img src="graphics/emojis/airplane.png"> :<span class="name">airplane</span>:</div></li>
-      <li><div><img src="graphics/emojis/helicopter.png"> :<span class="name">helicopter</span>:</div></li>
-      <li><div><img src="graphics/emojis/steam_locomotive.png"> :<span class="name">steam_locomotive</span>:</div></li>
-      <li><div><img src="graphics/emojis/tram.png"> :<span class="name">tram</span>:</div></li>
-      <li><div><img src="graphics/emojis/mountain_railway.png"> :<span class="name">mountain_railway</span>:</div></li>
-      <li><div><img src="graphics/emojis/bike.png"> :<span class="name">bike</span>:</div></li>
-      <li><div><img src="graphics/emojis/aerial_tramway.png"> :<span class="name">aerial_tramway</span>:</div></li>
-      <li><div><img src="graphics/emojis/suspension_railway.png"> :<span class="name">suspension_railway</span>:</div></li>
-      <li><div><img src="graphics/emojis/mountain_cableway.png"> :<span class="name">mountain_cableway</span>:</div></li>
-      <li><div><img src="graphics/emojis/tractor.png"> :<span class="name">tractor</span>:</div></li>
-      <li><div><img src="graphics/emojis/blue_car.png"> :<span class="name">blue_car</span>:</div></li>
-      <li><div><img src="graphics/emojis/oncoming_automobile.png"> :<span class="name">oncoming_automobile</span>:</div></li>
-      <li><div><img src="graphics/emojis/car.png"> :<span class="name">car</span>:</div></li>
-      <li><div><img src="graphics/emojis/red_car.png"> :<span class="name">red_car</span>:</div></li>
-      <li><div><img src="graphics/emojis/taxi.png"> :<span class="name">taxi</span>:</div></li>
-      <li><div><img src="graphics/emojis/oncoming_taxi.png"> :<span class="name">oncoming_taxi</span>:</div></li>
-      <li><div><img src="graphics/emojis/articulated_lorry.png"> :<span class="name">articulated_lorry</span>:</div></li>
-      <li><div><img src="graphics/emojis/bus.png"> :<span class="name">bus</span>:</div></li>
-      <li><div><img src="graphics/emojis/oncoming_bus.png"> :<span class="name">oncoming_bus</span>:</div></li>
+      <li><div><img src="graphics/emojis/airplane.png"> :<span class="name" data-alternative-name="vehicle">airplane</span>:</div></li>
+      <li><div><img src="graphics/emojis/helicopter.png"> :<span class="name" data-alternative-name="vehicle">helicopter</span>:</div></li>
+      <li><div><img src="graphics/emojis/steam_locomotive.png"> :<span class="name" data-alternative-name="vehicle">steam_locomotive</span>:</div></li>
+      <li><div><img src="graphics/emojis/tram.png"> :<span class="name" data-alternative-name="vehicle">tram</span>:</div></li>
+      <li><div><img src="graphics/emojis/mountain_railway.png"> :<span class="name" data-alternative-name="vehicle">mountain_railway</span>:</div></li>
+      <li><div><img src="graphics/emojis/bike.png"> :<span class="name" data-alternative-name="vehicle">bike</span>:</div></li>
+      <li><div><img src="graphics/emojis/aerial_tramway.png"> :<span class="name" data-alternative-name="vehicle">aerial_tramway</span>:</div></li>
+      <li><div><img src="graphics/emojis/suspension_railway.png"> :<span class="name" data-alternative-name="vehicle">suspension_railway</span>:</div></li>
+      <li><div><img src="graphics/emojis/mountain_cableway.png"> :<span class="name" data-alternative-name="vehicle">mountain_cableway</span>:</div></li>
+      <li><div><img src="graphics/emojis/tractor.png"> :<span class="name" data-alternative-name="vehicle">tractor</span>:</div></li>
+      <li><div><img src="graphics/emojis/blue_car.png"> :<span class="name" data-alternative-name="vehicle">blue_car</span>:</div></li>
+      <li><div><img src="graphics/emojis/oncoming_automobile.png"> :<span class="name" data-alternative-name="vehicle">oncoming_automobile</span>:</div></li>
+      <li><div><img src="graphics/emojis/car.png"> :<span class="name" data-alternative-name="vehicle">car</span>:</div></li>
+      <li><div><img src="graphics/emojis/red_car.png"> :<span class="name" data-alternative-name="vehicle">red_car</span>:</div></li>
+      <li><div><img src="graphics/emojis/taxi.png"> :<span class="name" data-alternative-name="vehicle">taxi</span>:</div></li>
+      <li><div><img src="graphics/emojis/oncoming_taxi.png"> :<span class="name" data-alternative-name="vehicle">oncoming_taxi</span>:</div></li>
+      <li><div><img src="graphics/emojis/articulated_lorry.png"> :<span class="name" data-alternative-name="vehicle">articulated_lorry</span>:</div></li>
+      <li><div><img src="graphics/emojis/bus.png"> :<span class="name" data-alternative-name="vehicle">bus</span>:</div></li>
+      <li><div><img src="graphics/emojis/oncoming_bus.png"> :<span class="name" data-alternative-name="vehicle">oncoming_bus</span>:</div></li>
       <li><div><img src="graphics/emojis/rotating_light.png"> :<span class="name">rotating_light</span>:</div></li>
-      <li><div><img src="graphics/emojis/police_car.png"> :<span class="name">police_car</span>:</div></li>
-      <li><div><img src="graphics/emojis/oncoming_police_car.png"> :<span class="name">oncoming_police_car</span>:</div></li>
-      <li><div><img src="graphics/emojis/fire_engine.png"> :<span class="name">fire_engine</span>:</div></li>
-      <li><div><img src="graphics/emojis/ambulance.png"> :<span class="name">ambulance</span>:</div></li>
-      <li><div><img src="graphics/emojis/minibus.png"> :<span class="name">minibus</span>:</div></li>
-      <li><div><img src="graphics/emojis/truck.png"> :<span class="name">truck</span>:</div></li>
-      <li><div><img src="graphics/emojis/train.png"> :<span class="name">train</span>:</div></li>
+      <li><div><img src="graphics/emojis/police_car.png"> :<span class="name" data-alternative-name="vehicle">police_car</span>:</div></li>
+      <li><div><img src="graphics/emojis/oncoming_police_car.png"> :<span class="name" data-alternative-name="vehicle">oncoming_police_car</span>:</div></li>
+      <li><div><img src="graphics/emojis/fire_engine.png"> :<span class="name" data-alternative-name="vehicle">fire_engine</span>:</div></li>
+      <li><div><img src="graphics/emojis/ambulance.png"> :<span class="name" data-alternative-name="vehicle">ambulance</span>:</div></li>
+      <li><div><img src="graphics/emojis/minibus.png"> :<span class="name" data-alternative-name="vehicle">minibus</span>:</div></li>
+      <li><div><img src="graphics/emojis/truck.png"> :<span class="name" data-alternative-name="vehicle">truck</span>:</div></li>
+      <li><div><img src="graphics/emojis/train.png"> :<span class="name" data-alternative-name="vehicle">train</span>:</div></li>
       <li><div><img src="graphics/emojis/station.png"> :<span class="name">station</span>:</div></li>
-      <li><div><img src="graphics/emojis/train2.png"> :<span class="name">train2</span>:</div></li>
-      <li><div><img src="graphics/emojis/bullettrain_front.png"> :<span class="name">bullettrain_front</span>:</div></li>
-      <li><div><img src="graphics/emojis/bullettrain_side.png"> :<span class="name">bullettrain_side</span>:</div></li>
-      <li><div><img src="graphics/emojis/light_rail.png"> :<span class="name">light_rail</span>:</div></li>
-      <li><div><img src="graphics/emojis/monorail.png"> :<span class="name">monorail</span>:</div></li>
-      <li><div><img src="graphics/emojis/railway_car.png"> :<span class="name">railway_car</span>:</div></li>
-      <li><div><img src="graphics/emojis/trolleybus.png"> :<span class="name">trolleybus</span>:</div></li>
+      <li><div><img src="graphics/emojis/train2.png"> :<span class="name" data-alternative-name="vehicle">train2</span>:</div></li>
+      <li><div><img src="graphics/emojis/bullettrain_front.png"> :<span class="name" data-alternative-name="vehicle">bullettrain_front</span>:</div></li>
+      <li><div><img src="graphics/emojis/bullettrain_side.png"> :<span class="name" data-alternative-name="vehicle">bullettrain_side</span>:</div></li>
+      <li><div><img src="graphics/emojis/light_rail.png"> :<span class="name" data-alternative-name="vehicle">light_rail</span>:</div></li>
+      <li><div><img src="graphics/emojis/monorail.png"> :<span class="name" data-alternative-name="vehicle">monorail</span>:</div></li>
+      <li><div><img src="graphics/emojis/railway_car.png"> :<span class="name" data-alternative-name="vehicle">railway_car</span>:</div></li>
+      <li><div><img src="graphics/emojis/trolleybus.png"> :<span class="name" data-alternative-name="vehicle">trolleybus</span>:</div></li>
       <li><div><img src="graphics/emojis/ticket.png"> :<span class="name">ticket</span>:</div></li>
       <li><div><img src="graphics/emojis/fuelpump.png"> :<span class="name">fuelpump</span>:</div></li>
       <li><div><img src="graphics/emojis/vertical_traffic_light.png"> :<span class="name">vertical_traffic_light</span>:</div></li>
