--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta property="og:image" content="http://www.emoji-cheat-sheet.com/graphics/emojis/thumbsup.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.emoji-cheat-sheet.com/" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico"/>
     <link href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-    <link href="style.css?6" rel="stylesheet">
+    <link href="style.css?7" rel="stylesheet">
     <script>
       // http://mths.be/aab
       var _gaq = [['_setAccount', 'UA-20637790-4'], ['_trackPageview']];
@@ -26,6 +27,7 @@
       <h1>Emoji cheat sheet</h1>
       <input class="search" placeholder="Instant Search">
     </div>
+
     <p id="description">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons listed on this page are supported on
       <a href="http://campfirenow.com/">Campfire</a>,
@@ -77,10 +79,24 @@
       <a href="https://www.teamwork.com/chat">TeamworkChat</a>
       and <a href="https://www.bugtrack.in">Damn Bugs</a>.<br>
     </p>
+
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
       &#x2708; <b>Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
     </p>
+
+    <div id="share">
+      <div>
+        <iframe src="https://ghbtns.com/github-btn.html?user=arvida&amp;repo=emoji-cheat-sheet.com&amp;type=fork&amp;count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+      </div>
+      <div>
+        <iframe src="https://ghbtns.com/github-btn.html?user=arvida&amp;repo=emoji-cheat-sheet.com&amp;type=star&amp;count=true" frameborder="0" scrolling="0" width="106px" height="20px"></iframe>
+      </div>
+      <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="horizontal">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></div>
+      <div><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.emoji-cheat-sheet.com&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=21" scrolling="no" frameborder="0" allowTransparency="true" height="20" width="100"></iframe></div>
+      <div><div class="g-plusone" data-size="medium" data-href="http://www.emoji-cheat-sheet.com/"></div></div>
+    </div>
+
     <h2>People</h2>
     <ul class="people emojis" id="emoji-people">
       <li><div><img src="graphics/emojis/bowtie.png"> :<span class="name">bowtie</span>:</div></li>
@@ -1024,11 +1040,6 @@
       <li><div data-sound="flawless">/play flawless</div></li>
       <li><div data-sound="butts">/play butts</div></li>
     </ul>
-    <div id="share">
-      <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></div>
-      <div><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.emoji-cheat-sheet.com&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=90" scrolling="no" frameborder="0" allowTransparency="true"></iframe></div>
-      <div><div class="g-plusone" data-size="tall" data-href="http://www.emoji-cheat-sheet.com/"></div></div>
-    </div>
     <div id="flash-test"></div>
     <div id="footer">
       <p>
@@ -1039,21 +1050,14 @@
         <a href="https://github.com/arvida/emoji-cheat-sheet.com">GitHub</a>.
       </p>
       <p>
-        &#x2764; View all the super awesome people that have contributed to this page on <a href="https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors">the GitHub contributors page</a>.
-      </p>
-      <p>
-        &#x2714; Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.
-      </p>
-      <p>
+        &#x2764; View all the super awesome people that have contributed to this page on <a href="https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors">the GitHub contributors page</a>.<br>
+        &#x2714; Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.<br>
         &#x267A; Built using bits from
         <a href="http://www.steamdev.com/zclip">zClip</a>,
         <a href="http://subtlepatterns.com/">SubtlePatterns</a>,
         <a href="http://www.givainc.com/labs/jnotify_jquery_plugin.htm">jnotify</a>, and
         <a href="http://listjs.com/">list.js</a>.
       </p>
-      <a href="https://github.com/arvida/emoji-cheat-sheet.com">
-        <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" id="github" alt="Fork me on GitHub">
-      </a>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="script.js?5"></script>
