Test with ads from Carbon
Will run this for a month and see how if feels / works.

More info http://carbonads.net

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       <input class="search" placeholder="Instant Search">
     </div>
 
+    <div id="ad">
+      <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=emojicheatsheetcom" id="_carbonads_js"></script>
+    </div>
+
     <p id="description">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons listed on this page are supported on
       <a href="http://campfirenow.com/">Campfire</a>,
