--- a/public/index.html
+++ b/public/index.html
@@ -80,8 +80,9 @@
       <a href="https://esa.io">esa</a>,
       <a href="https://www.DBook.org">DBook</a>,
       <a href="https://groups.io">Groups.io</a>,
-      <a href="https://www.teamwork.com/chat">TeamworkChat</a>
-      and <a href="https://www.bugtrack.in">Damn Bugs</a>.<br>
+      <a href="https://www.teamwork.com/chat">TeamworkChat</a>,
+      <a href="https://www.bugtrack.in">Damn Bugs</a>
+      and <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>.<br>
     </p>
 
     <p>
