Add Buildkite to list of supported services

--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,9 @@
       <a href="https://www.DBook.org">DBook</a>,
       <a href="https://groups.io">Groups.io</a>,
       <a href="https://www.teamwork.com/chat">TeamworkChat</a>,
-      <a href="https://www.bugtrack.in">Damn Bugs</a>
-      and <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>.<br>
+      <a href="https://www.bugtrack.in">Damn Bugs</a>,
+      <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>
+      and <a href="https://buildkite.com">Buildkite</a>.<br>
     </p>
 
     <p>
