--- a/public/index.html
+++ b/public/index.html
@@ -408,7 +408,7 @@
       <li><div><img src="graphics/emojis/waning_crescent_moon.png"> :<span class="name">waning_crescent_moon</span>:</div></li>
       <li><div><img src="graphics/emojis/last_quarter_moon_with_face.png"> :<span class="name">last_quarter_moon_with_face</span>:</div></li>
       <li><div><img src="graphics/emojis/first_quarter_moon_with_face.png"> :<span class="name">first_quarter_moon_with_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/moon.png"> :<span class="name">moon</span>:</div></li>
+      <li><div><img src="graphics/emojis/crescent_moon.png"> :<span class="name">crescent_moon</span>:</div></li>
       <li><div><img src="graphics/emojis/earth_africa.png"> :<span class="name" data-alternative-name="europe, emea">earth_africa</span>:</div></li>
       <li><div><img src="graphics/emojis/earth_americas.png"> :<span class="name">earth_americas</span>:</div></li>
       <li><div><img src="graphics/emojis/earth_asia.png"> :<span class="name">earth_asia</span>:</div></li>
